<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.bloodalcoholcaltulatorapp.MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/units"
                    android:text="@string/units_text"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioGroup
                    android:id="@+id/units_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton android:id="@+id/metric_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/metric_units"/>
                    <RadioButton android:id="@+id/imperial_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imperial_units"/>
                </RadioGroup>

                <TextView
                    android:id="@+id/country"
                    android:labelFor="@+id/country_value"
                    android:text="@string/country_text"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/country_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="35dp"
                    android:minHeight="50dp"
                    android:autofillHints=""
                    android:inputType="text" />
                <TextView
                    android:id="@+id/weight"
                    android:labelFor="@+id/weight_value"
                    android:text="@string/weight_text"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/weight_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="35dp"
                    android:minHeight="50dp"
                    android:autofillHints=""
                    android:inputType="numberDecimal" />
                <TextView
                    android:id="@+id/gender"
                    android:labelFor="@+id/gender_value"
                    android:text="@string/gender_text"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioGroup
                    android:id="@+id/gender_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"/>
                    <RadioButton android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"/>
                </RadioGroup>
                <TextView
                    android:id="@+id/drinks_name"
                    android:labelFor="@+id/drinks_name_value"
                    android:text="@string/drinks_name_text"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/drinks_name_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="35dp"
                    android:minHeight="50dp"
                    android:autofillHints=""
                    android:inputType="text" />
                <TextView
                    android:id="@+id/drinks_volume"
                    android:labelFor="@+id/drinks_volume_value"
                    android:text="@string/drinks_volume_text"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/drinks_volume_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="35dp"
                    android:minHeight="50dp"
                    android:autofillHints=""
                    android:inputType="numberDecimal" />
                <TextView
                    android:id="@+id/hours_since_last_drink"
                    android:labelFor="@+id/hours_since_last_drink_value"
                    android:text="@string/hours_since_last_drink_text"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/hours_since_last_drink_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="35dp"
                    android:minHeight="50dp"
                    android:autofillHints=""
                    android:inputType="numberDecimal" />

                <!--TextView used for output -->
                <TextView
                    android:id="@+id/output_text_view"
                    android:text="@string/output_text"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/add_drink_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_drink_button_text" />


            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>